--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -3250,9 +3250,7 @@ CONFIG_USB_EHCI_HCD_PLATFORM=y
 # CONFIG_USB_ISP1362_HCD is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_MAX3421_HCD is not set
-CONFIG_USB_OHCI_HCD=y
-CONFIG_USB_OHCI_HCD_PCI=y
-CONFIG_USB_OHCI_HCD_PLATFORM=y
+# CONFIG_USB_OHCI_HCD is not set
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
@@ -3412,8 +3410,6 @@ CONFIG_USB_F_PTP=y
 CONFIG_USB_F_AUDIO_SRC=y
 CONFIG_USB_F_ACC=y
 CONFIG_USB_F_DIAG=y
-CONFIG_USB_F_CDEV=y
-CONFIG_USB_F_QDSS=y
 CONFIG_USB_CONFIGFS=y
 # CONFIG_USB_CONFIGFS_SERIAL is not set
 # CONFIG_USB_CONFIGFS_ACM is not set
@@ -3442,8 +3438,8 @@ CONFIG_USB_CONFIGFS_F_HID=y
 # CONFIG_USB_CONFIGFS_F_PRINTER is not set
 CONFIG_USB_CONFIGFS_F_DIAG=y
 # CONFIG_USB_CONFIGFS_F_GSI is not set
-CONFIG_USB_CONFIGFS_F_CDEV=y
-CONFIG_USB_CONFIGFS_F_QDSS=y
+# CONFIG_USB_CONFIGFS_F_CDEV is not set
+# CONFIG_USB_CONFIGFS_F_QDSS is not set
 # CONFIG_USB_CONFIGFS_F_CCID is not set
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
@@ -3479,6 +3475,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_SDIO_UART is not set
+# CONFIG_MMC_TEST is not set
 # CONFIG_MMC_SIMULATE_MAX_SPEED is not set
 
 #
@@ -3674,7 +3671,6 @@ CONFIG_DMADEVICES=y
 # DMA Devices
 #
 CONFIG_DMA_ENGINE=y
-CONFIG_DMA_ACPI=y
 CONFIG_DMA_OF=y
 # CONFIG_AMBA_PL08X is not set
 # CONFIG_FSL_EDMA is not set
@@ -3834,7 +3830,7 @@ CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
 CONFIG_ION_MSM=y
-CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
+# CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 # CONFIG_DGNC is not set
@@ -3902,7 +3898,7 @@ CONFIG_RMNET_IPA3=y
 # CONFIG_IPA_UT is not set
 CONFIG_GPIO_USB_DETECT=y
 # CONFIG_MSM_MHI is not set
-CONFIG_MSM_11AD=y
+# CONFIG_MSM_11AD is not set
 # CONFIG_SEEMP_CORE is not set
 CONFIG_USB_BAM=y
 CONFIG_MSM_EXT_DISPLAY=y
@@ -3963,11 +3959,10 @@ CONFIG_REMOTE_SPINLOCK_MSM=y
 # Clock Source drivers
 #
 CONFIG_CLKSRC_OF=y
-CONFIG_CLKSRC_ACPI=y
 CONFIG_CLKSRC_PROBE=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
-CONFIG_MSM_TIMER_LEAP=y
+# CONFIG_MSM_TIMER_LEAP is not set
 # CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 # CONFIG_ARM_TIMER_SP804 is not set
 # CONFIG_ATMEL_PIT is not set
@@ -4070,6 +4065,7 @@ CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_CDSP_LOADER=y
 # CONFIG_MSM_LPASS_RESOURCE_MANAGER is not set
 CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 # CONFIG_MSM_SYSMON_COMM is not set
 CONFIG_MSM_PIL=y
@@ -4081,9 +4077,7 @@ CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_AVTIMER=y
 # CONFIG_MSM_KERNEL_PROTECT is not set
 CONFIG_MSM_SERVICE_NOTIFIER=y
-CONFIG_MSM_QBT1000=y
-# CONFIG_MSM_RPM_LOG is not set
-CONFIG_MSM_RPM_STATS_LOG=y
+# CONFIG_MSM_QBT1000 is not set
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_WCD_DSP_GLINK=y
 CONFIG_QCOM_SMCINVOKE=y
@@ -4273,7 +4267,6 @@ CONFIG_QCOM_TADC=y
 #
 # Light sensors
 #
-# CONFIG_ACPI_ALS is not set
 # CONFIG_ADJD_S311 is not set
 # CONFIG_AL3320A is not set
 # CONFIG_APDS9300 is not set
@@ -4377,7 +4370,7 @@ CONFIG_GENERIC_PHY=y
 # CONFIG_PHY_QCOM_APQ8064_SATA is not set
 # CONFIG_PHY_QCOM_IPQ806X_SATA is not set
 # CONFIG_PHY_XGENE is not set
-CONFIG_PHY_QCOM_UFS=y
+# CONFIG_PHY_QCOM_UFS is not set
 # CONFIG_POWERCAP is not set
 # CONFIG_MCB is not set
 
@@ -4459,7 +4452,7 @@ CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
-# CONFIG_FS_ENCRYPTION is not set
+CONFIG_FS_ENCRYPTION=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4492,7 +4485,7 @@ CONFIG_FUSE_FS=y
 # DOS/FAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
-CONFIG_MSDOS_FS=y
+# CONFIG_MSDOS_FS is not set
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
@@ -4550,22 +4543,7 @@ CONFIG_PSTORE_RAM=y
 CONFIG_PSTORE_LAST_KMSG=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_NETWORK_FILESYSTEMS=y
-# CONFIG_NFS_FS is not set
-# CONFIG_NFSD is not set
-# CONFIG_CEPH_FS is not set
-CONFIG_CIFS=y
-# CONFIG_CIFS_STATS is not set
-# CONFIG_CIFS_WEAK_PW_HASH is not set
-# CONFIG_CIFS_UPCALL is not set
-# CONFIG_CIFS_XATTR is not set
-# CONFIG_CIFS_DEBUG is not set
-# CONFIG_CIFS_DEBUG2 is not set
-# CONFIG_CIFS_DFS_UPCALL is not set
-# CONFIG_CIFS_SMB2 is not set
-# CONFIG_NCP_FS is not set
-# CONFIG_CODA_FS is not set
-# CONFIG_AFS_FS is not set
+# CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
 CONFIG_NLS_CODEPAGE_437=y
@@ -4583,15 +4561,15 @@ CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_865 is not set
 # CONFIG_NLS_CODEPAGE_866 is not set
 # CONFIG_NLS_CODEPAGE_869 is not set
-CONFIG_NLS_CODEPAGE_936=y
-CONFIG_NLS_CODEPAGE_950=y
+# CONFIG_NLS_CODEPAGE_936 is not set
+# CONFIG_NLS_CODEPAGE_950 is not set
 # CONFIG_NLS_CODEPAGE_932 is not set
 # CONFIG_NLS_CODEPAGE_949 is not set
 # CONFIG_NLS_CODEPAGE_874 is not set
 # CONFIG_NLS_ISO8859_8 is not set
 # CONFIG_NLS_CODEPAGE_1250 is not set
 # CONFIG_NLS_CODEPAGE_1251 is not set
-CONFIG_NLS_ASCII=y
+# CONFIG_NLS_ASCII is not set
 CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_ISO8859_2 is not set
 # CONFIG_NLS_ISO8859_3 is not set
@@ -4630,16 +4608,10 @@ CONFIG_NLS_UTF8=y
 #
 CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
-# CONFIG_BOOT_PRINTK_DELAY is not set
-# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
 #
-# CONFIG_DEBUG_INFO_REDUCED is not set
-# CONFIG_DEBUG_INFO_SPLIT is not set
-# CONFIG_DEBUG_INFO_DWARF4 is not set
-# CONFIG_GDB_SCRIPTS is not set
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=0
@@ -4661,75 +4633,42 @@ CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
 # Memory Debugging
 #
 # CONFIG_PAGE_EXTENSION is not set
-# CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_PAGE_POISONING is not set
-# CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
 # CONFIG_HAVE_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_KMEMLEAK is not set
-# CONFIG_DEBUG_STACK_USAGE is not set
-# CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
-# CONFIG_DEBUG_PER_CPU_MAPS is not set
 CONFIG_HAVE_ARCH_KASAN=y
 # CONFIG_KASAN is not set
-# CONFIG_DEBUG_SHIRQ is not set
 
 #
 # Debug Lockups and Hangs
 #
-# CONFIG_LOCKUP_DETECTOR is not set
-# CONFIG_DETECT_HUNG_TASK is not set
-# CONFIG_WQ_WATCHDOG is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
 # CONFIG_SCHED_DEBUG is not set
-CONFIG_SCHED_INFO=y
+# CONFIG_SCHED_INFO is not set
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
-# CONFIG_DEBUG_PREEMPT is not set
 
 #
 # Lock Debugging (spinlocks, mutexes, etc...)
 #
-# CONFIG_DEBUG_RT_MUTEXES is not set
-# CONFIG_DEBUG_SPINLOCK is not set
-# CONFIG_DEBUG_MUTEXES is not set
-# CONFIG_DEBUG_WW_MUTEX_SLOWPATH is not set
-# CONFIG_DEBUG_LOCK_ALLOC is not set
-# CONFIG_PROVE_LOCKING is not set
-# CONFIG_LOCK_STAT is not set
-# CONFIG_DEBUG_ATOMIC_SLEEP is not set
-# CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
-# CONFIG_LOCK_TORTURE_TEST is not set
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_HAVE_DEBUG_BUGVERBOSE is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
-# CONFIG_DEBUG_LIST is not set
-# CONFIG_DEBUG_PI_LIST is not set
-# CONFIG_DEBUG_SG is not set
-# CONFIG_DEBUG_NOTIFIERS is not set
-# CONFIG_DEBUG_CREDENTIALS is not set
-
 #
 # RCU Debugging
 #
 # CONFIG_PROVE_RCU is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_TORTURE_TEST is not set
-# CONFIG_RCU_TORTURE_TEST is not set
-CONFIG_RCU_CPU_STALL_TIMEOUT=21
 # CONFIG_RCU_STALL_WATCHDOG_BITE is not set
-# CONFIG_RCU_TRACE is not set
-# CONFIG_RCU_EQS_DEBUG is not set
-# CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
-# CONFIG_NOTIFIER_ERROR_INJECTION is not set
-# CONFIG_FAULT_INJECTION is not set
 CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
@@ -4769,10 +4708,6 @@ CONFIG_TRACING_EVENTS_GPIO=y
 #
 # Runtime Testing
 #
-# CONFIG_LKDTM is not set
-# CONFIG_TEST_LIST_SORT is not set
-# CONFIG_BACKTRACE_SELF_TEST is not set
-# CONFIG_RBTREE_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
 # CONFIG_TEST_STRING_HELPERS is not set
@@ -4788,10 +4723,8 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
-# CONFIG_KGDB is not set
 CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_UBSAN is not set
-# CONFIG_ARM64_PTDUMP is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
@@ -4836,18 +4769,12 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
-CONFIG_SECURITY_SMACK=y
-# CONFIG_SECURITY_SMACK_BRINGUP is not set
-# CONFIG_SECURITY_SMACK_NETFILTER is not set
+# CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
-CONFIG_INTEGRITY=y
-# CONFIG_INTEGRITY_SIGNATURE is not set
-# CONFIG_IMA is not set
-# CONFIG_EVM is not set
+# CONFIG_INTEGRITY is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
-# CONFIG_DEFAULT_SECURITY_SMACK is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_CRYPTO=y
@@ -4995,7 +4922,6 @@ CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_POLY_HASH_ARM64_CE=y
-CONFIG_CRYPTO_AES_ARM64=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
