Revert "cpuset: Refactor cpuset assist code"
This reverts commit 2dc25e0a0c158328a9e82284fbda39da20f7fa09.

Signed-off-by: Moeeze Hassan <fammas.maz@gmail.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1349,7 +1349,7 @@ config SCHED_TUNE
 	  If unsure, say N.
 
 config CPUSETS_ASSIST
-	bool "Cpuset configuration helper"
+	bool "Cpusets configuration helper"
 	depends on CPUSETS
 	depends on ANDROID
 	help
